--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9000 --nolazy ./dist/main/server.js",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
-    "lint": "eslint .",
+    "lint": "eslint . --ext ts",
     "lint:fix": "yarn lint --fix",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:staged": "yarn test --findRelatedTests",
@@ -18,9 +18,14 @@
     "prepare:linux": "yarn prepare && chmod ug+x .husky/*"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.2.0",
     "@shelf/jest-mongodb": "^2.2.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.29",
+    "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
@@ -36,8 +41,19 @@
     "jest-environment-node": "27.x.x",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.0",
+    "module-alias": "^2.2.2",
+    "mongodb": "^4.5.0",
+    "nodemon": "^2.0.15",
+    "validator": "^13.7.0"
+  },
+  "_moduleAliases": {
+    "@": "dist"
+  }
 }
