--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-redeclare": "off",
     "no-useless-constructor": "off",
+    "no-unused-vars": "off",
     "import/export": "off"
   }
 }
