--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.29",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
@@ -48,6 +49,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15",
