test: ensure DeckMongoRepository returns false if user is not the owner

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "bson-objectid": "^2.0.3",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
