--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest-environment-node": "27.x.x",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "supertest": "^6.2.3",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
