--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shelf/jest-mongodb": "^2.2.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.29",
@@ -49,8 +50,10 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "apollo-server-express": "^3.7.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.5.0",
