--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.11",
+    "@graphql-tools/utils": "^8.6.10",
     "apollo-server-express": "^3.7.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
