--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.29",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
@@ -60,6 +61,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15",
+    "swagger-ui-express": "^4.4.0",
     "validator": "^13.7.0"
   },
   "_moduleAliases": {
